packages/svelte/tests/compiler-errors/samples/attribute-unique-allowed/_config.js
import { test } from '../../test';

export default test({
	error: false
});
